# equos-examples

./: .gitignore  README.md
examples/equos-nextjs-integration/: .env.template  README.md  package-lock.json  package.json  tailwind.config.ts
examples/equos-nextjs-integration/src/app/: actions.ts  conversation-client.tsx  globals.css  layout.tsx  (+1 more)
examples/equos-nodejs-integration/: .env.template  README.md  package-lock.json  package.json  tsconfig.json
examples/equos-nodejs-integration/src/: client.ts  create-agent.ts  create-avatar.ts  create-brain.ts  create-character.ts  create-face.ts  create-voice.ts  list-brains.ts  list-characters.ts  list-faces.ts  list-voices.ts  run-conversation.ts  run-session.ts
examples/equos-python-integration/: .env.template  .gitignore  README.md  pyproject.toml
examples/equos-python-integration/src/python_integration/: async_create_agent.py  async_create_avatar.py  async_run_session.py  client.py  create_agent.py  create_avatar.py  create_brain.py  create_character.py  create_face.py  create_voice.py  feed_audio.py  feed_audio_and_get_video_back.py  list_brains.py  list_characters.py  list_faces.py  list_voices.py  run_conversation.py  run_conversation_async.py  run_session.py  stop_session.py
examples/equos-react-integration/: README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/equos-react-integration/src/: App.tsx  index.css  main.tsx
examples/equos-vanilla-integration/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/equos-vanilla-integration/src/: index.css  main.ts
(+14 files in other folders)
