[project]
name = "python-integration"
version = "0.1.0"
description = ""
authors = [
    {name = "Loïc Combis",email = "loic@equos.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "equos (>=0.1.0,<0.2.0)"
]

[tool.poetry]
packages = [{include = "python_integration", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
