[project]
authors = [
  {name = "Loïc Combis", email = "loic@equos.ai"},
]
dependencies = [
  "dotenv (>=0.9.9,<0.10.0)",
  "livekit (>=1.0.13,<2.0.0)",
  "livekit-agents (>=1.2.9,<2.0.0)",
  "equos (>=1.1.0,<2.0.0)",
]
description = ""
name = "equos-python-integration"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
