[project]
authors = [
  {name = "Loïc Combis", email = "loic@equos.ai"},
]
dependencies = [
  "dotenv (>=0.9.9,<0.10.0)",
  "equos (>=3.1.3,<4.0.0)",
  "python-dateutil (>=2.9.0)",
]
description = "Equos Python SDK examples."
name = "equos-python-integration"
readme = "README.md"
requires-python = ">=3.11,<4.0"
version = "0.1.0"

[tool.poetry]
packages = [{include = "python_integration", from = "src"}]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
